@@ -3,6 +3,6 @@ DIST 099.txt 92806 RMD160 708c6452e3df4d4bb4f7a157f8bdf128857b8715 SHA1 f0115e6f
 DIST 1.0.00.txt 113667 RMD160 d1ff509de05b2c386461d88f5899d476732c0ba0 SHA1 044437abc177ba8c5c5efd0956697f1562504d00 SHA256 09048540f59dc5357e0427cab88ec048b0a4f63643791eda70d01461de03609a
 EBUILD ttytter-0.9.7.ebuild 664 RMD160 0c00455309e1dfea6d45e7440eb280539ad1c525 SHA1 21e298a25acedfe44ae97a5c3d2c0d7c3c20e2e3 SHA256 5fa8901075e5e407b29a33f1ae2c4563d676a1c7f7427b6fb367e34de2951687
 EBUILD ttytter-0.9.9.ebuild 665 RMD160 a8efce9bf0bb107ff6ace2ed64abd019e30f8c71 SHA1 767104ebf93e650b71c781b10458fd57a6256790 SHA256 4fef9a6adc54e9614cee041d8f7a54e24a049932c08d551b44976b619aacd278
-EBUILD ttytter-1.0.00.ebuild 620 RMD160 e6d0deafe83d8eb3c740ed3caafcde814960fc8e SHA1 470a40d7be39827b5eec570235a44833e428f90d SHA256 d7bf5b4f1a247892538198125b7b1069c79b6e7065c5f5a53863593e26de14b0
-MISC ChangeLog 618 RMD160 c2ad12deb8d7548b0fa9b0459696b403a4fb9229 SHA1 3e95b3b6b75c48faf65fd17357589498be3e16eb SHA256 3c836d6247ddaea6079eb00ccaf371229e061cff7b931b16b637526718fe2e39
+EBUILD ttytter-1.0.00.ebuild 595 RMD160 3f23116479f0efa25ba46d13b5b71a01d2a66ccd SHA1 b66f05498ceb7412463eacec42ccaabb9e9e6e15 SHA256 f57a8e846f3571ab72ca863853f75ff4aaa29e11ad25466f2d5e42dccdf41c22
+MISC ChangeLog 739 RMD160 c84dcf8fe4ad7a99c019eca84b73e9629e5c450f SHA1 d378ffcdcd500572c4daa64448545309c14db0a7 SHA256 4d62685f8a1257a846164320ce6f7792e778a53fcf400d03d53b845d16f2390f
 MISC metadata.xml 322 RMD160 84b785c57263d8906be10da9148538d172f0313b SHA1 d835241227d89a077aefaf57389c81c7f6755c19 SHA256 27473aa7a75d0af3b3de917dab1e419bec29999aae278ad061e176526a67f005
