@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Mar 2010; Anna Gabutero <amdg@lavabit.com> ttytter-1.0.00.ebuild:
+  Changes based on feedback from #gentoo-sunrise
+
 *ttytter-1.0.00 (22 Feb 2010)
 
   22 Feb 2010; Anna Gabutero <amdg@lavabit.com> ttytter-0.9.9.ebuild,
